# code-pattern-analyzer

./: .gitignore  ACHIEVEMENTS.md  ARCHITECTURAL_PATTERNS_SUMMARY.md  DEVELOPMENT.md  DOCS_REORGANIZATION.md  Dockerfile  ENHANCED_VISUALIZATION_SUMMARY.md  EXTENDING.md  FORCE_DIRECTED_VISUALIZATION.md  GETTING_STARTED.md  INTERACTIVE_VISUALIZATION_GUIDE.md  Makefile  ONBOARDING.md  PHILOSOPHY.md  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.md  README.md  README_INTEGRATION.md  README_UPDATES.md  ROADMAP.md  SUMMARY.md  TEMP_project_tree.md  USAGE.md  USAGE_GUIDE.md  VISUALIZATION.md  VISUALIZATION_ENHANCEMENT_PLAN.md  WEB_UI_IMPLEMENTATION.md  WEB_UI_PLAN.md  analyze_complexity.py  code-patter-analyzer-file-tree.txt  code_pattern_analyzer.py  code_pattern_analyzer_gui.py  compare_architectures.py  create_example_project.py  debug_architecture.py  debug_dependency_inversion.py  debug_information_hiding.py  debug_layered_architecture.py  demo.sh  design_pattern_index.html  (+31 more)
chat/: code-pattern-analyzer-chat-01a.txt  code-pattern-analyzer-chat-01b.txt  code-pattern-analyzer-chat-01c.txt
code_pattern_analyzer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
docs/: dependency_graph_usage.md  getting_started.md
examples/: ARCHITECTURE_PATTERNS.md  example_cmd.py
reports/: js_patterns_report.html
sample-code/: sample.py
samples/: adapter_sample.js  adapter_sample.py  code_smells.py  command_sample.js  command_sample.py  decorator_sample.js  decorator_sample.py  facade_sample.js  facade_sample.py  factory_sample.py  observer_sample.js  observer_sample.py  (+6 more)
(+173 files in other folders)
