[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "code-pattern-analyzer"
version = "0.1.0"
description = "A tool for analyzing code patterns across languages"
author = "Claude"
requires-python = ">=3.8"
dependencies = [
    "tree-sitter",
    "pyyaml",
    "click"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort"
]
